cmake_minimum_required(VERSION 3.15)
project(arithmetic_training)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g -O0")
set(CMAKE_COMPILE_WARNING_AS_ERROR ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")

# file(GLOB files *.cc *.cpp)
file(GLOB_RECURSE files *.cc *.cpp)
foreach (file ${files})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
    string(REPLACE " " "_" exe "${exe}")
    string(REPLACE "[" "" exe "${exe}")
    string(REPLACE "]" "." exe "${exe}")
    add_executable(${exe} ${file})
    message(\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
endforeach ()